2006-01-14 Kimmo
 PATCH: [ 1372044 ] Add FileActionScript for folder compare actions
  Src: DirActions.cpp DirView.h Merge.dsp
  Src new files: FileActionScript.cpp FileActionScript.h
 PATCH: [ 1385672 ] Replace some 'file's with 'item's
  Src: Merge.rc
  Src/Language: */Merge*.rc
 PATCH: [ 1405340 ] Add XP shadow to folderskip.ico
  Submitted by Tim
  Src/res: folderskip.ico

2006-01-14 Perry
 TODO: [ 1395638 ] CChildFrame::PreCreateWindow() does nothing
  Src: ChildFrm.cpp ChildFrm.h MainFrm.cpp

2006-01-13 Perry
 PATCH: [ 1403454 ] Add comment to UniStdioFile.h
 (Cosmetic)
  Src/Common: UniFile.h
 PATCH: [ 1403893 ] Fix whitespace error in ByteCompare
 BUG: [ 1400779 ] Whitespace bug in ByteComparator
  Src: ByteComparator.cpp

2006-01-13 Kimmo
 PATCH: [ 1039677 ] Alter text of Reset button label
  Src: Merge.rc
  Src/Language: */Merge*.rc

2006-01-12 Kimmo
 PATCH: [ 1399263 ] Captioned panes (new style)
  Src: ChildFrm.cpp DiffViewBar.h LocationBar.h Merge.dsp Merge.rc resource.h
  Src/Common new files: scbarcf.cpp scbarcf.h
  Src/Language: */Merge*.rc
 PATCH: [ 1399738 ] Filename bars to use caption colors
  Src: ChildFrm.cpp FilePathEdit.cpp FilePathEdit.h

2006-01-12 Tim
 PATCH: [ 1403412 ] German: Option 'Line Difference Coloring' looks broken
  Src/Languages/German: MergeGerman.rc

2006-01-11 WinMerge beta release 2.5.2

2006-01-11 Kimmo
 PATCH: [ 1402774 ] Use dark red color for 'binarydiff.ico'
  Submitted by Tim
  Src/res: binarydiff.ico
 PATCH: [ 1400845 ] Allow Shift+Ctrl+F3 to search selected text backwards
  With addition from Takashi for Shift+F3 backwards search
  Src: Merge.rc
  Src/editlib: ccrystaltextview.cpp
  Src/Language: */Merge*.rc
 BUG: [ 1400829 ] Crash trying to open location pane context menu
  Src: LocationView.cpp

2006-01-11 Tim
 PATCH: [ 1401420 ] New 'MergeDir' icon
  Src/res: MergeDir.ico

2006-01-10 Perry
 PATCH: [ 1400830 ] Fix drop to only do LoadProjectFile when 1 file dropped